A fix for Bug#37550 SHOW PROCESSLIST displays "copy to tmp table" even this does not happen. Only set thd->proc_info if we're about to copy data in ALTER.